<resources>
    <string name="app_name">OmniExtras</string>
    <string name="show_alarm_title">Show next alarm</string>
    <string name="show_date_title">Show date</string>
    <string name="custom_gadget">Digital clock</string>
    <string name="clock_shadow_title">Shadow</string>
    <string name="analog_gadget">Analog clock</string>
    <string name="abbrev_wday_month_day_no_year" translatable="false">EEEMMMd</string>
    <string name="full_wday_month_day_no_year" translatable="false">EEEEMMMMd</string>
    <string name="font_sample_text" translatable="false">11:57</string>
    <string name="clock_font_title">Font</string>
    <string name="clock_color_title">Color</string>
    <string name="omnijaws_service_unkown">No weather data</string>
    <string name="omnijaws_service_error">Error loading weather data</string>
    <string name="omnijaws_service_init">Waiting for weather data</string>
    <string name="omnijaws_service_progress">Updating</string>
    <string name="weather_widget">Weather</string>
    <string name="omnijaws_current_text">Now</string>
    <string name="weather_icon_pack_title">Condition icon pack</string>
    <string name="show_background_title">Background shadow</string>
    <string name="weather_config_title">Service settings</string>
    <string name="weather_config_summary"></string>
    <string name="calendar_widget">Agenda</string>
    <string name="no_title_label">(No title)</string>
    <string name="loading">Loading\u2026</string>
    <string name="calendar_widget_no_events">No upcoming calendar events</string>
    <string name="omnijaws_service_error_marker" translatable="false">*</string>
    <string name="omnijaws_service_disabled">Service disabled</string>

</resources>
