<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/weather_widget">

    <ListPreference
        android:key="weather_icon_pack"
        android:title="@string/weather_icon_pack_title" />

    <CheckBoxPreference
        android:key="show_background"
        android:title="@string/show_background_title" />

    <PreferenceScreen
        android:summary="@string/weather_config_summary"
        android:title="@string/weather_config_title">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="org.omnirom.omnijaws.SettingsActivityService"
            android:targetPackage="org.omnirom.omnijaws" />
    </PreferenceScreen>

    <Preference
        android:persistent="false"
        android:widgetLayout="@layout/preference_button" />

</PreferenceScreen>
